Move expression parser into java-lib (#59)
* Move expression parser into java-lib

* Clean up code

* Updated as per code review

* Ensure 96% coverage for the expression parser

* Use 1 fork for unit tests

* Use jdk11

* Change number of forks back to 4

* Rename class

* Rename classes, clean up tests

* Rename templateExpression as well